# doro

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.md  justfile
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: flags.rs
crates/exec/: Cargo.toml
crates/linux-sandbox/: Cargo.toml
crates/mcp-client/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/tui/: Cargo.toml
docs/: book.toml
docs/src/: SUMMARY.md  agent-protocol.md  architecture.md  introduction.md  modules.md  product-analysis.md  roadmap.md  security-model.md  tech-stack.md
doro-agent/: Cargo.toml
doro-agent/src/: collectors.rs  filesystem.rs  lib.rs  main.rs  terminal.rs
doro-agent/src/docker/: client.rs  containers.rs  executor.rs  images.rs  mod.rs  networks.rs  types.rs  volumes.rs
doro-ai/: Cargo.toml
doro-ai/src/: lib.rs  openai.rs
doro-ansi-escape/: Cargo.toml  README.md
doro-apply-patch/: Cargo.toml
doro-cli/: Cargo.toml
doro-cli/src/: debug_sandbox.rs  lib.rs  main.rs
doro-common/: Cargo.toml  README.md
doro-config/: Cargo.toml
doro-config/src/: lib.rs
doro-container/: Cargo.toml
doro-container/src/: client.rs  containers.rs  executor.rs  images.rs  lib.rs  networks.rs  traits.rs  types.rs  volumes.rs
doro-control-plane/: Cargo.toml
doro-control-plane/src/: lib.rs  main.rs
doro-core/: Cargo.toml  README.md
doro-core/src/: config.rs  error.rs  exec.rs  lib.rs  mcp_connection_manager.rs
doro-core/tests/: test_support.rs
doro-exec/: Cargo.toml
doro-exec/src/: main.rs
doro-execpolicy/: Cargo.toml
doro-file-search/: Cargo.toml
doro-linux-sandbox/: Cargo.toml  README.md
doro-linux-sandbox/src/: lib.rs
doro-linux-sandbox/tests/: landlock.rs
doro-login/: Cargo.toml
doro-mcp-client/: Cargo.toml
doro-mcp-client/src/: main.rs
doro-mcp-server/: Cargo.toml
doro-mcp-server/src/: codex_tool_config.rs  message_processor.rs
doro-mcp-types/: Cargo.toml
doro-protocol/: Cargo.toml  build.rs
doro-protocol/proto/doro/agent/v1/: agent.proto
doro-protocol/src/: lib.rs
doro-store/: Cargo.toml
doro-store/migrations/: 202605270001_schema_migrations.sql  202605270002_core_store_schema.sql  202605270002_timescale_hypertables.sql  202605270003_seed_apps_settings.sql  202605270004_users_refresh_tokens.sql  202605280001_host_system_profile.sql  202605290001_container_created_at.sql  202605300001_approval_expiration.sql  202605300002_virtual_machines.sql
doro-store/src/: lib.rs
doro-store/src/entities/: agent_capabilities.rs  agent_events.rs  agents.rs  app_installs.rs  approvals.rs  apps.rs  backup_accounts.rs  backup_records.rs  containers.rs  cron_job_runs.rs  cron_jobs.rs  databases.rs  enrollment_tokens.rs  hosts.rs  metric_snapshots.rs  mod.rs  operation_logs.rs  refresh_tokens.rs  resource_groups.rs  settings.rs  task_runs.rs  task_steps.rs  tasks.rs  users.rs  virtual_machine_images.rs  virtual_machine_snapshots.rs  virtual_machine_templates.rs  virtual_machines.rs  websites.rs
doro-store/src/migrations/: mod.rs
doro-tui/: Cargo.toml
doro-tui/src/: lib.rs
doro-ui/: .gitignore  README.md  bun.lockb  middleware.ts  next.config.ts  package.json  proxy.ts  tailwind.config.ts
doro-ui/app/: globals.css  layout.tsx  page.tsx
doro-ui/app/(dashboard)/: layout.tsx  page.tsx
doro-ui/app/(dashboard)/ai/: page.tsx
doro-ui/app/(dashboard)/approvals/: page.tsx
doro-ui/app/(dashboard)/apps/: page.tsx
doro-ui/app/(dashboard)/containers/: page.tsx
doro-ui/app/(dashboard)/cron/: page.tsx
doro-ui/app/(dashboard)/databases/: page.tsx
doro-ui/app/(dashboard)/hosts/: page.tsx
doro-ui/app/(dashboard)/logs/: page.tsx
doro-ui/app/(dashboard)/settings/: page.tsx
doro-ui/app/(dashboard)/system/: page.tsx
doro-ui/app/(dashboard)/tasks/: page.tsx
doro-ui/app/(dashboard)/terminal/: page.tsx
doro-ui/app/(dashboard)/tools/: page.tsx
doro-ui/app/(dashboard)/websites/: page.tsx
doro-ui/app/[locale]/: layout.tsx
doro-ui/app/login/: page.tsx
doro-ui/components/admin/: data-table.tsx  filter-chips.tsx  module-tabs.tsx  page-section.tsx  setting-list.tsx  toolbar.tsx
doro-ui/components/dashboard/: auth-gate.tsx  control-panel.tsx  dashboard-data-page.tsx  placeholder-page.tsx
doro-ui/components/dashboard/ai/: ai-page.tsx
doro-ui/components/dashboard/approvals/: approvals-page.tsx
doro-ui/components/dashboard/apps/: application-list.tsx  apps-page.tsx
doro-ui/components/dashboard/cron/: cron-page.tsx
doro-ui/components/dashboard/files/: files-page.tsx
doro-ui/components/dashboard/hosts/: hosts-page.tsx
doro-ui/components/dashboard/overview/: container-list.tsx  control-plane-environment.tsx  metric-grid.tsx  overview-page.tsx  trend-preview.tsx
doro-ui/components/dashboard/resources/: containers-page.tsx  databases-page.tsx  resource-list-page.tsx
doro-ui/components/dashboard/settings/: settings-page.tsx
doro-ui/components/dashboard/system/: system-page.tsx
doro-ui/components/dashboard/tasks/: tasks-page.tsx
doro-ui/components/dashboard/terminal/: terminal-page.tsx
doro-ui/components/layout/: app-shell.tsx  dashboard-header.tsx  locale-html-sync.tsx  page-container.tsx  page-transition.tsx  search-command.tsx  sidebar.tsx
doro-ui/components/login/: login-page.tsx
doro-ui/components/ui/: badge.tsx  button.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx
doro-ui/hooks/: use-theme.ts
doro-ui/i18n/: request.ts  routing.ts
doro-ui/lib/: control-plane-api.ts  control-plane-mappers.ts  datetime.ts  mock-data.ts  navigation.ts
doro-ui/messages/en-US/: auth.json  common.json  dashboard.json  navigation.json  resources.json  settings.json
doro-ui/messages/zh-CN/: auth.json  common.json  dashboard.json  navigation.json  resources.json  settings.json
doro-ui/scripts/: check-i18n.mjs
doro-ui/types/: api.ts  dashboard.ts
doro-vm/: Cargo.toml
doro-vm/src/: cloud_init.rs  console.rs  images.rs  lib.rs  network.rs  state_store.rs  traits.rs  types.rs
doro-vm/src/qemu/: argv.rs  mod.rs  provider.rs
(+8 files in other folders)
