[workspace]
resolver = "2"
members = [
    "doro-ansi-escape",
    "doro-apply-patch",
    "doro-cli",
    "doro-common",
    "doro-core",
    "doro-exec",
    "doro-execpolicy",
    "doro-file-search",
    "doro-linux-sandbox",
    "doro-login",
    "doro-mcp-client",
    "doro-mcp-server",
    "doro-mcp-types",
    "doro-tui",
]


[workspace.dependencies]
doro-ansi-escape = { path = "doro-ansi-escape" }
doro-apply-patch = { path = "doro-apply-patch" }
doro-cli = { path = "doro-cli" }
doro-common = { path = "doro-common" }
doro-core = { path = "doro-core" }
doro-exec = { path = "doro-exec" }
doro-execpolicy = { path = "doro-execpolicy" }
doro-file-search = { path = "doro-file-search" }
doro-linux-sandbox = { path = "doro-linux-sandbox" }
doro-login = { path = "doro-login" }
doro-mcp-client = { path = "doro-mcp-client" }
doro-mcp-server = { path = "doro-mcp-server" }
doro-mcp-types = { path = "doro-mcp-types" }
doro-tui = { path = "doro-tui" }


[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
authors = ["zhubby <yanvalue@gmail.com>"]
version = "0.1.0"
description = "doro"
repository = "https://github.com/zhubby/doro"
homepage = "https://github.com/zhubby/doro"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
lto = "fat"
# Because we bundle some of these executables with the TypeScript CLI, we
# remove everything to make the binary as small as possible.
strip = "symbols"

# See https://github.com/openai/codex/issues/1411 for details.
codegen-units = 1
