[workspace]
resolver = "2"
members = [
    "doro-agent",
    "doro-ai",
    "doro-cli",
    "doro-control-plane",
    "doro-protocol",
    "doro-store",
]


[workspace.dependencies]
doro-agent = { path = "doro-agent" }
doro-ai = { path = "doro-ai" }
doro-cli = { path = "doro-cli" }
doro-control-plane = { path = "doro-control-plane" }
doro-protocol = { path = "doro-protocol" }
doro-store = { path = "doro-store" }

anyhow = "1"
axum = { version = "0.7", features = ["json", "macros", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }


[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.81"
authors = ["zhubby <yanvalue@gmail.com>"]
version = "0.1.0"
description = "doro"
repository = "https://github.com/zhubby/doro"
homepage = "https://github.com/zhubby/doro"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
