[workspace]
resolver = "2"
members = [
    "doro-agent",
    "doro-ai",
    "doro-cli",
    "doro-config",
    "doro-control-plane",
    "doro-protocol",
    "doro-store",
    "doro-vm",
]


[workspace.dependencies]
doro-agent = { path = "doro-agent" }
doro-ai = { path = "doro-ai" }
doro-cli = { path = "doro-cli" }
doro-config = { path = "doro-config" }
doro-control-plane = { path = "doro-control-plane" }
doro-protocol = { path = "doro-protocol" }
doro-store = { path = "doro-store" }
doro-vm = { path = "doro-vm" }

anyhow = "1"
async-trait = "0.1"
argon2 = "0.5"
axum = { version = "0.7", features = ["json", "macros", "tokio", "ws"] }
base64 = "0.22"
bollard = { version = "0.18.1", default-features = false, features = ["chrono", "http", "pipe", "ssl_providerless", "time"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures-util = "0.3"
jsonwebtoken = "9"
nvml-wrapper = "0.10"
prost = "0.13"
prost-types = "0.13"
portable-pty = "0.8"
qapi = { version = "0.15.0", features = ["qmp", "qga", "async-tokio-net"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["macros", "mock", "runtime-tokio-rustls", "sqlx-postgres", "with-chrono", "with-json", "with-uuid"] }
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
sysinfo = "0.38.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.8"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl", "uuid-impl", "serde-json-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }


[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["zhubby <yanvalue@gmail.com>"]
version = "0.1.0"
description = "doro"
repository = "https://github.com/zhubby/doro"
homepage = "https://github.com/zhubby/doro"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
