[package]
name = "doro-agent"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
doro-config = { workspace = true }
doro-protocol = { workspace = true }
doro-vm = { workspace = true }
futures-util = { workspace = true }
nvml-wrapper = { workspace = true, optional = true }
portable-pty = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[features]
default = []
gpu = ["nvml-wrapper"]
