[package]
name = "doro-cli"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "doro"
path = "src/main.rs"

[lib]
name = "doro_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
doro-config = { workspace = true }
doro-protocol = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
