[package]
name = "doro-cli"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "doro"
path = "src/main.rs"

[lib]
name = "doro_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
doro-agent = { workspace = true }
doro-config = { workspace = true }
doro-control-plane = { workspace = true }
doro-protocol = { workspace = true }
doro-store = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
