[package]
name = "doro-cli"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "doro"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
doro-agent = { workspace = true }
doro-config = { workspace = true }
doro-control-plane = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
