[package]
name = "doro-container"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
bollard = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
