[package]
name = "doro-control-plane"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "doro-control-plane"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
doro-ai = { workspace = true }
doro-protocol = { workspace = true }
doro-store = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
