[package]
name = "doro-control-plane"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
doro-ai = { workspace = true }
doro-config = { workspace = true }
doro-protocol = { workspace = true }
doro-store = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
prost-types = { workspace = true }
rand = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
