[package]
name = "doro-exec"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "doro-exec"
path = "src/main.rs"

[lib]
name = "codex_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
chrono = "0.4.40"
clap = { version = "4", features = ["derive"] }
doro-core = {workspace = true}
doro-common = {workspace = true, features = [
    "cli",
    "elapsed",
    "sandbox_summary",
] }
doro-linux-sandbox = { workspace = true }
doro-mcp-types = { workspace = true }
owo-colors = "4.2.0"
serde_json = "1"
shlex = "1.3.0"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
