[package]
name = "doro-protocol"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
