[package]
name = "doro-store"
version = { workspace = true }
edition = "2024"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
doro-config = { workspace = true }
doro-protocol = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
