[package]
name = "codex-cli"
version = { workspace = true }
edition = "2024"

[[bin]]
name = "codex"
path = "src/main.rs"

[lib]
name = "codex_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
codex-core = { workspace = true}
codex-common = {workspace = true ,  features = ["cli"] }
codex-exec = { workspace = true}
codex-login = { workspace = true}
codex-linux-sandbox = { workspace = true}
codex-mcp-server = { workspace = true}
codex-tui = { workspace = true}
serde_json = "1"
tokio = { version = "1", features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
